# mtm

./: exams.xlsx  ~$exams.xlsx
ex0/: mtm_buggy.c  part1.c
ex1/zipping/: amount_set_str.c  amount_set_str_tests.h  matamikya.c  matamikya_order.c  matamikya_order.h  matamikya_product.c  matamikya_product.h
ex2/Dry/: CMakeLists.txt  dry.cpp  dry.docx  main.cpp
ex2/debug/: CMakeLists.txt  City.h  citizen.h  employee.h  exceptions.h  faculty.h  main.cpp  manager.h  skill.h  solution.cpp  workplace.h
ex2/implementation/: CMakeLists.txt  City.cpp  Employee.cpp  Skill.cpp  Workplace.cpp  citizen.h  city.h  employee.h  exeptions.h  faculty.h  main.cpp  manager.h  skill.h  (+2 more)
ex2/solution/: CMakeLists.txt  Citizen.h  City.h  Employee.h  Exceptions.h  Faculty.h  Manager.cpp  Manager.h  Skill.cpp  Skill.h  Workplace.h  citizen.h  employee.h  exceptions.h  faculty.h  main.cpp  manager.h  skill.h  solution.cpp
ex2/solution/provided/: workplace_print_test.cpp
ex2/zipping folder/: CMakeLists.txt  dry.cpp
ex2/zipping folder/HW2-19601001628158760/: 205689581-325382919.details
ex2/zipping folder/HW2-19601001628158760/205689581-325382919/solution/: City.cpp  Employee.h  Faculty.h  Manager.cpp  Skill.cpp  Skill.h  Workplace.h  exceptions.h
ex2/zipping folder/solution/: Citizen.cpp  Citizen.h  City.cpp  City.h  Employee.cpp  Employee.h  Faculty.h  Manager.cpp  Manager.h  Skill.cpp  Skill.h  Workplace.cpp  Workplace.h  exceptions.h  solution.cpp
ex3/: example - Copy.txt  hw3_part1.py  part1.py
exam/: 2016WinBq4partb.cpp  CMakeLists.txt  main.cpp  tutorial_13_q_6.cpp
(+71 files in other folders)
